<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".features.CallBackItMainActivity">


    <group android:checkableBehavior="single">
        <item
                android:id="@+id/action_january"
                android:checked="true"
                android:title="@string/january"/>
        <item
                android:id="@+id/action_february"
                android:title="@string/february"/>
        <item
                android:id="@+id/action_march"
                android:title="@string/march"/>
        <item
                android:id="@+id/action_april"
                android:title="@string/april"/>
        <item
                android:id="@+id/action_may"
                android:title="@string/may"/>
        <item
                android:id="@+id/action_june"
                android:title="@string/june"/>
        <item
                android:id="@+id/action_july"
                android:title="@string/july"/>
        <item
                android:id="@+id/action_august"
                android:title="@string/august"/>
        <item
                android:id="@+id/action_september"
                android:title="@string/september"/>
        <item
                android:id="@+id/action_october"
                android:title="@string/october"/>
        <item
                android:id="@+id/action_november"
                android:title="@string/november"/>
        <item
                android:id="@+id/action_december"
                android:title="@string/december"/>
    </group>




</menu>