<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/selectableItemBackground"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <Button
        android:id="@+id/btnCreateReschedule"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:layout_marginStart="@dimen/dialog_start_margin"
        android:layout_marginEnd="@dimen/dialog_end_margin"
        android:background="@drawable/btn_rounded_background_selector"
        android:text="@string/btn_create_time"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/clCreateReschedule"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCreateReschedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        android:focusableInTouchMode="true"
        app:layout_constraintTop_toBottomOf="@id/btnCreateReschedule"
        tools:visibility="visible"
        >

        <TextView
            android:id="@+id/tvTitleDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_dialog_create_reschedule"
            android:textSize="16sp"
            android:textColor="@color/main_black"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tilNumberUnit"
            app:layout_constraintVertical_chainStyle="packed"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNumberUnit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/tvTitleDialog"
            app:layout_constraintTop_toBottomOf="@id/tvTitleDialog"
            app:layout_constraintBottom_toTopOf="@id/btnCancel"
            app:layout_constraintEnd_toStartOf="@id/tvUnitReschedule"
            app:layout_constraintVertical_chainStyle="packed"

            >

            <EditText
                android:id="@+id/etNumberUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/hint_dialog_create_reschedule"
                android:inputType="numberDecimal|numberSigned"
                android:maxLength="3"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <AutoCompleteTextView
            android:id="@+id/tvUnitReschedule"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/selector_black_accent_dark"
            android:dropDownWidth="100dp"
            android:drawableEnd="@drawable/selector_expand_more_clickable"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toEndOf="@id/tilNumberUnit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tilNumberUnit"
            app:layout_constraintBottom_toBottomOf="@id/tilNumberUnit"
            tools:text="minutes" />


        <ImageButton
            android:id="@+id/btnCancel"
            android:background="@drawable/btn_background_selector"
            android:layout_width="@dimen/btn_circle_height"
            android:layout_height="@dimen/btn_circle_width"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:rotation="45"
            android:src="@drawable/ic_control_point_white_24dp"
            android:contentDescription="@string/content_description_dialog_create_template_button_close"
            app:layout_constraintTop_toBottomOf="@id/tilNumberUnit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnAddReschedule"
            app:layout_constraintVertical_chainStyle="packed"/>

        <ImageButton
            android:id="@+id/btnAddReschedule"
            android:background="@drawable/btn_background_selector"
            android:layout_width="@dimen/btn_circle_height"
            android:layout_height="@dimen/btn_circle_width"
            android:layout_marginEnd="8dp"
            android:src="@drawable/baseline_done_white_24"
            android:contentDescription="@string/content_description_dialog_create_template_button_save_template"
            app:layout_constraintTop_toTopOf="@id/btnCancel"
            app:layout_constraintBottom_toBottomOf="@id/btnCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>