<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="0dp"


        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:paddingBottom="@dimen/padding_top"
        app:layout_constraintEnd_toStartOf="@+id/btnOpenContacts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etPhoneNumberEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/hintPhoneNumber"
            android:inputType="phone"
            android:paddingLeft="@dimen/padding_left" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/btnOpenContacts"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_people_black_48"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout4" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilContactName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout6"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

        <EditText
            android:id="@+id/etContactNameEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/hintContactName"
            android:inputType="textPersonName"
            android:paddingLeft="@dimen/padding_left" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
        app:layout_constraintTop_toBottomOf="@+id/tilContactName">

        <EditText
            android:id="@+id/etDescriptionEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="left|center"
            android:hint="@string/hintDescription"
            android:inputType="textCapSentences|textMultiLine"
            android:paddingLeft="@dimen/padding_left" />

    </android.support.design.widget.TextInputLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/llDate"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="horizontal"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:paddingEnd="5dp"
                android:text="Sun, 01 Jan 2017"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="normal" />
        </android.support.design.widget.TextInputLayout>


        <ImageView
            android:id="@+id/ivArrowDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"

            android:layout_marginStart="8dp"
            android:src="@drawable/baseline_arrow_drop_down_black_24"
            app:layout_constraintStart_toEndOf="@+id/tilDate"
            app:layout_constraintTop_toTopOf="@+id/tilDate" />


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/llTime"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackground"

        android:clickable="true"
        android:orientation="horizontal"

        app:layout_constraintStart_toEndOf="@id/llDate"
        app:layout_constraintTop_toTopOf="@id/llDate">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingEnd="5dp"
                android:text="00:00"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="normal" />
        </android.support.design.widget.TextInputLayout>


        <ImageView
            android:id="@+id/ivArrowTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginStart="58dp"
            android:src="@drawable/baseline_arrow_drop_down_black_24"
            app:layout_constraintStart_toStartOf="@+id/tilTime"
            app:layout_constraintTop_toTopOf="@+id/tilTime" />


    </android.support.constraint.ConstraintLayout>



    <ImageButton
        android:id="@+id/btnDeleteEvent"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_background_selector"
        android:src="@drawable/baseline_delete_white_24"
        android:text="@string/btnDeleteEvent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSaveEvent"
        app:layout_constraintTop_toTopOf="@+id/btnSaveEvent"

        />

    <ImageButton
        android:id="@+id/btnCall"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_background_selector"
        android:src="@drawable/baseline_call_white_24"
        android:text="@string/btnCallEvent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSaveEvent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"

        />

    <ImageButton
        android:id="@+id/btnSaveEvent"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_background_selector"

        android:src="@drawable/baseline_done_white_24"
        android:text="@string/btnCreateEvent"
        android:transitionName="@string/btn_transition_name"
        app:layout_constraintEnd_toStartOf="@+id/btnDeleteEvent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCall"
        app:layout_constraintTop_toTopOf="@+id/btnCall" />


    <ProgressBar
        android:id="@+id/pbEvent"
        style="?android:attr/progressBarStyle"
        android:layout_width="51dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="2dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>